--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ rand = "0.8"
 crypto_box = { version = "0.9", features = ["chacha20"] }
 x25519-dalek = {  version = "2.0", features = ["static_secrets"] }
 sha2 = "0.10"
+hex = "0.4.3"
+hex-literal = "0.4.1"
+codec = { package = "parity-scale-codec", version = "3.7.4"}
