--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ sha2 = "0.10"
 hex = "0.4.3"
 hex-literal = "0.4.1"
 codec = { package = "parity-scale-codec", version = "3.7.4"}
+blake2 = "0.10.6"
